DuPont DevSB/src/objects/ccrz__E_Review__c.object
<CustomObject>
    <description>Reviews</description>
    <fields>
        <fullName>ccrz__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enabled</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__IsHelpfulCount__c</fullName>
        <description>Number of viewers think this review is helpful</description>
        <label>IsHelpfulCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__LikeCount__c</fullName>
        <description>Number of persons think this review this helpful.</description>
        <label>Like Count</label>
        <summaryFilterItems>
            <field>ccrz__E_ReviewLike__c.ccrz__Like__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ccrz__E_ReviewLike__c.ccrz__Review__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ccrz__NumOfViewers__c</fullName>
        <description>Number of people view this review</description>
        <label>Number of Viewers</label>
        <summaryForeignKey>ccrz__E_ReviewLike__c.ccrz__Review__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ccrz__Product__c</fullName>
        <description>Product ID</description>
        <label>Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipName>E_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__RatingCode__c</fullName>
        <label>Rating Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__Rating__c</fullName>
        <formula>if(isnumber(text(ccrz__RatingCode__c)), value( text(ccrz__RatingCode__c) ), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__ReviewDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Review Date</description>
        <label>Review Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__ReviewId__c</fullName>
        <externalId>true</externalId>
        <label>Review Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Status__c</fullName>
        <description>Customer review status.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__Subject__c</fullName>
        <description>Subject</description>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__UserReview__c</fullName>
        <description>User Review</description>
        <label>User Review</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User ID</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CC Review</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Review Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>